
2023-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (refmod_checks): extracted from (cb_build_identifier)
	* typeck.c (refmod_checks): prevent condition-names to be reference-modified
	* parser.y (class_value): improved error messages
	* tree.c (cb_build_cast): set numeric category for all integer casts

2023-07-15  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): allow ref-mod up to identifier length
	* typeck.c (cb_build_identifier): new warning for suspicious reference-
	  modification with start or length set to maximum and the other to var
	* typeck.c (cb_build_move_literal): optimize to cb_build_move_num_zero in
	  more cases

2023-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (cb_ppecho_direct, output_pending_newlines): output only up
	  to 9 empty lines, for more empty lines in the preparsed output file
	  generate a matching #line directive, this saves both space and serves
	  as a workaround for an unclear scanner bug that may happen with huge
	  amounts of empty lines
	* pplex.l (switch_to_buffer): don't re-strdup the filename
	* parser.y (emit_statement): changed from define to inline function
	* codegen.c: complete output of program's end source location if requested
	* scanner.l: handle line directive in any state
	* warning.def, typeck.c (validate_move), cobc.c (process_command_line):
	* use existing -Wstrict-typing only for "strict" type mismatches, including
	  "same size, different type" and move it to -Wextra; the other mismatches
	  are still raised with -Wall but under the new -Wtyping

2023-07-11  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* parser.y: fix code generation for OPEN/CLOSE with multiple
	  filenames, where DECLARATIVES for all arguments were called when
	  only one argument failed

2023-07-10  Simon Sobisch <simonsobisch@gnu.org>

	check for internal memory bounds with new flag "memory-check"
	* flag.def, cobc.c (cobc_deciph_memory_check), tree.h: new compile